<resources>
    <string name="app_name">appMovil</string>
    <string name="tarea1">Tarea 1</string>
    <string name="tarea1_2">Tarea 1.2</string>
    <string name="tarea2">Tarea 2</string>
    <string name="tarea2_2">Tarea 2.2</string>
    <string name="tarea4">Tarea 4</string>
    <string name="tarea4_2">Tarea 4.2</string>
    <!-- Strings related to login -->
    <string name="title_activity_login_ejercicio02_tarea01">LoginActivityEjercicio02Tarea01</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_ejercicio2_tarea01">LoginActivity_ejercicio2_tarea01</string>
    <string name="title_activity_login_ejercicio01_tarea01">LoginActivity_Ejercicio01_Tarea01
    </string>
    <string name="action_search">action_search</string>


</resources>